[package]
name = "casm-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casm = { path = "..", version = "0.1.0" }

clap = { version = "4.4", features = ["derive"] }
